Don't delay setting of channelInterpretation and channelCountMode

Don't defer the setting of the values.  Instead, use atomic access for
these internal variables, adding appropriate getters and setters for
these.  This also allows us to remove the code that implemented the
deferral.

Ran the tests from bug 613332 to make sure we didn't regress the race
conditions.  Tests still pass without issues.

BUG=636576
TEST=See bug 613332 for tests

Review-Url: https://codereview.chromium.org/2242573002
Cr-Commit-Position: refs/heads/master@{#412289}

Former-commit-id: e3860bd297e465778059f3d845280634b4074e19