third_party/WebKit/Source/modules/webaudio/StereoPannerNode.cpp
@@ -26,8 +26,8 @@ StereoPannerHandler::StereoPannerHandler(AudioNode& node, float sampleRate, Audi
     // The node-specific default mixing rules declare that StereoPannerNode
     // can handle mono to stereo and stereo to stereo conversion.
     m_channelCount = 2;
-    m_channelCountMode = ClampedMax;
-    m_channelInterpretation = AudioBus::Speakers;
+    setInternalChannelCountMode(ClampedMax);
+    setInternalChannelInterpretation(AudioBus::Speakers);
 
     initialize();
 }
@@ -89,7 +89,7 @@ void StereoPannerHandler::setChannelCount(unsigned long channelCount, ExceptionS
     if (channelCount > 0 && channelCount <= 2) {
         if (m_channelCount != channelCount) {
             m_channelCount = channelCount;
-            if (m_channelCountMode != Max)
+            if (internalChannelCountMode() != Max)
                 updateChannelsForInputs();
         }
     } else {
@@ -110,26 +110,17 @@ void StereoPannerHandler::setChannelCountMode(const String& mode, ExceptionState
     ASSERT(isMainThread());
     BaseAudioContext::AutoLocker locker(context());
 
-    ChannelCountMode oldMode = m_channelCountMode;
-
     if (mode == "clamped-max") {
-        m_newChannelCountMode = ClampedMax;
+        setInternalChannelCountMode(ClampedMax);
     } else if (mode == "explicit") {
-        m_newChannelCountMode = Explicit;
+        setInternalChannelCountMode(Explicit);
     } else if (mode == "max") {
         // This is not supported for a StereoPannerNode, which can only handle
         // 1 or 2 channels.
         exceptionState.throwDOMException(
             NotSupportedError,
                 "StereoPanner: 'max' is not allowed");
-        m_newChannelCountMode = oldMode;
-    } else {
-        // Do nothing for other invalid values.
-        m_newChannelCountMode = oldMode;
     }
-
-    if (m_newChannelCountMode != oldMode)
-        context()->deferredTaskHandler().addChangedChannelCountMode(this);
 }
 
 // ----------------------------------------------------------------
